--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <script src="//code.jivosite.com/widget/6GI5lMt7X4" async></script>
+
   </body>
 </html>
